==> colorcard/XTU_UAV/RC/Hardware/NRF24L01.c <==
#include "NRF24L01.h"
#include "NRF24L01_Define.h"
#define NRF24L01_TX_PACKET_WIDTH		8							//发送数据包宽度，范围：1~32字节
#define NRF24L01_RX_PACKET_WIDTH		8							//接收通道0数据包宽度，范围：1~32字节

void NRF24L01_W_CE(uint8_t BitValue)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_0, BitValue ? GPIO_PIN_SET : GPIO_PIN_RESET);
}

void NRF24L01_W_CSN(uint8_t BitValue)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_1, BitValue ? GPIO_PIN_SET : GPIO_PIN_RESET);
}

void NRF24L01_W_SCK(uint8_t BitValue)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_2, BitValue ? GPIO_PIN_SET : GPIO_PIN_RESET);
}

void NRF24L01_W_MOSI(uint8_t BitValue)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_3, BitValue ? GPIO_PIN_SET : GPIO_PIN_RESET);
}

uint8_t NRF24L01_R_MISO(void)
{
    return (HAL_GPIO_ReadPin(GPIOA, GPIO_PIN_4) == GPIO_PIN_SET) ? 1 : 0;
}
